# aidoku-sources

./: .gitignore  Cargo.toml  Develop.md  Dockerfile  README.md  index.json  index.min.json
.github/workflows/: deployment.yaml
sources/: README.md  README_ZH.md  zh.baka-v1.aix  zh.baka-v2.aix  zh.dm5-v7.aix  zh.jmtt-v1.aix  zh.jmtt-v4.aix  zh.jmtt-v5.aix  zh.mxs-v4.aix  zh.mxshm-v2.aix
sources/zh.baka/: Cargo.toml
sources/zh.baka/res/: filters.json  settings.json  source.json
sources/zh.baka/src/: fetch.rs  home.rs  html.rs  lib.rs  settings.rs  url.rs
sources/zh.dm5/: Cargo.toml
sources/zh.dm5/res/: filters.json  source.json
sources/zh.dm5/src/: Home.rs  home.rs  html.rs  lib.rs  settings.rs  test.rs  url.rs
sources/zh.dm5/src/fetch/: mod.rs
sources/zh.dm5/src/html/: mod.rs
sources/zh.dm5/src/js_packer/: mod.rs
sources/zh.jmtt/: Cargo.toml
sources/zh.jmtt/res/: filters.json  settings.json  source.json
sources/zh.jmtt/src/: fetch.rs  helpers.rs  home.rs  html.rs  lib.rs  settings.rs  test.rs  url.rs
sources/zh.jmtt/src/canvas/: mod.rs
sources/zh.jmtt/src/fetch/: mod.rs
sources/zh.jmtt/src/helpers/: mod.rs
sources/zh.jmtt/src/html/: mod.rs
sources/zh.jmtt/src/image/: mod.rs
sources/zh.jmtt/src/url/: mod.rs
sources/zh.mxs/: Cargo.toml
sources/zh.mxs/res/: filters.json  settings.json  source.json
sources/zh.mxs/src/: home.rs  html.rs  lib.rs  settings.rs  test.rs  url.rs
sources/zh.mxshm/: Cargo.toml
sources/zh.mxshm/res/: filters.json  source.json
sources/zh.mxshm/src/: home.rs  lib.rs  test.rs  url.rs
(+3 files in other folders)
